created homepage using html & css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | Muskan's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Fontawesome icons -->
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
 </head>
 <body>
-    Hi, My name is Muskan.
-    I am an engineering student.
+    <nav class="navbar">
+        <div class="nav-brand">Muskan Gupta</div>
+        <ul class="list-non-bullet nav-items">
+            <li class="list-item-inline">
+                <a class="link link-active" href="index.html">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="blogs.html">Blogs</a>
+            </li>
+        </ul>
+    </nav>
 
-    I have worked on few CLI apps.
+    <header class="hero">
+        <img  class="hero-img" src="images/homepic.svg" alt="">
+        <h1 class="hero-heading">Hi, I am Muskan<span class="hero-sec-text"> A Web Developer</span></h1>
+    </header>
+
+    <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Technologies</h1>
+            <p>I ama familiar with the following technologies</p>
+            <p>
+                <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
+                <img src="https://img.icons8.com/color/48/000000/bootstrap.png"/>
+                <img src="https://img.icons8.com/color/50/000000/python.png"/>
+                <img src="https://img.icons8.com/color/48/000000/git.png"/>
+                <img src="https://img.icons8.com/color/48/000000/react-native.png"/>
+                <img src="https://img.icons8.com/color/48/000000/nodejs.png"/>
+            </p>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Projects</h1>
+            <p>I have made some projects using different web technologies.You can see all of those projects here: </p>
+            <a href="/" class="link link-primary">See Projects</a>
+        </div>
+    </section>
+
+    <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>I have written few technical as well as non technical blogs.You can read them from here:</p>
+            <a href="/" class="link link-secondary">Read Blogs</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h3 class="footer-heading">heading</h3>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/muskan-gupta-0803/">
+                    <img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png"/>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/muskan-gupta-0803/">
+                    <img src="https://img.icons8.com/color/48/000000/github.png"/>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/iamMuskaaaan/">
+                    <img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png"/>
+                </a>
+            </li>
+        </ul>
+    </footer>
+    
 </body>
 </html>
