Updated projects and blogs page

--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,54 @@
     </nav>
 
     <header class="hero">
-        <h1 class="hero-heading">My<span class="hero-sec-text"> Blogs</span></h1>
+        <img  class="hero-img" src="images/blogpic.svg" alt="">
+        <h1 class="hero-heading">My<span class="hero-other-page"> Blogs</span></h1>
     </header>
+
+    <!-- blogs -->
+
+    <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Dummy blog 1</h1>
+            <p>This Quiz is to test how well do you know the two famous cartoon characters Doraemon and Shinchan, watched by kids and even adults.
+
+            So are you one of them? Try out this quiz to see for yourself ✌️</p>
+            <a href="" class="link link-primary">Read More...</a>
+            
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Dummy blog 2</h1>
+            <p>This is a quiz game about me. If you think you know me , You can try this out and see how well you know me :)</p>
+            <a href=""  class="link link-primary">Read More...</a>
+            
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h3 class="footer-heading">Connect with me!</h3>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://www.linkedin.com/in/muskan-gupta-0803/">
+                    <img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png"/>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://github.com/muskan-gupta-0803/">
+                    <img src="https://img.icons8.com/color/48/000000/github.png"/>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://twitter.com/iamMuskaaaan/">
+                    <img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png"/>
+                </a>
+            </li>
+        </ul>
+        <div> &copy; Made by Muskan</div>
+    </footer>
 </body>
 </html>
