--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <header class="hero">
         <img  class="hero-img" src="images/homepic.svg" alt="">
-        <h1 class="hero-heading">Hi, I am Muskan<span class="hero-sec-text"> A Web Developer</span></h1>
+        <h1 class="hero-heading">Hi, I am Muskan Gupta<span class="hero-sec-text"> A Web Developer</span></h1>
     </header>
 
     <section class="section light-orange">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I ama familiar with the following technologies</p>
+            <p>I am familiar with the following technologies</p>
             <p>
                 <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
                 <img src="https://img.icons8.com/color/48/000000/css3.png"/>
@@ -53,7 +53,7 @@
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I have made some projects using different web technologies.You can see all of those projects here: </p>
-            <a href="/" class="link link-primary">See Projects</a>
+            <a href="projects.html" class="link link-primary">See Projects</a>
         </div>
     </section>
 
@@ -61,30 +61,31 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I have written few technical as well as non technical blogs.You can read them from here:</p>
-            <a href="/" class="link link-secondary">Read Blogs</a>
+            <a href="blogs.html" class="link link-secondary">Read Blogs</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <h3 class="footer-heading">heading</h3>
+        <h3 class="footer-heading">Connect with me!</h3>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/muskan-gupta-0803/">
+                <a class="link" target="_blank" href="https://www.linkedin.com/in/muskan-gupta-0803/">
                     <img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png"/>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/muskan-gupta-0803/">
+                <a class="link" target="_blank" href="https://github.com/muskan-gupta-0803/">
                     <img src="https://img.icons8.com/color/48/000000/github.png"/>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/iamMuskaaaan/">
+                <a class="link" target="_blank" href="https://twitter.com/iamMuskaaaan/">
                     <img src="https://img.icons8.com/color/48/000000/twitter-circled--v1.png"/>
                 </a>
             </li>
         </ul>
+        <div> &copy; Made by Muskan</div>
     </footer>
     
 </body>
