added new projects in project page

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,76 @@
     </header>
 
     <!-- project sections -->
+    <section class="section">
+        <div class="container container-center">
+            <h1>Stocks-App</h1>
+            <small>September,2021 <span class="mark-num">markFourteen</span></small>
+            <p>This is an app that will check and compare price of stocks to know if you are getting a profit or loss.Just add your number of stocks and its initial & current prices, and get the profit or loss value.💲</p>
+            <a href="https://profit-loss-in-stocks.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Stocks-App" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
+
+    <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Birthday-Palindrome</h1>
+            <small>September,2021 <span class="mark-num">markThirteen</span></small>
+            <p>🥳 This app will check if your birthday date is a palindrome or not.And if not it will tell you how many days gap is there between your date and palindrome date. 😀</p>
+            <a href="https://check-palindrome-birth-day.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Birthday-Palindrome" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Do-you-know-Triangles</h1>
+            <small>September,2021 <span class="mark-num">markTwelve</span></small>
+            <p>This app will test you skills on how well do you know triangles and its properties.</p>
+            <a href="https://about-triangles.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Do-you-know-Triangles" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
+
+    <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Is-Your-Birthday-Lucky?</h1>
+            <small>September,2021 <span class="mark-num">markEleven</span></small>
+            <p>🥳 This is a fun app to check if your birthdate is lucky or not depending on your lucky number.So think about your lucky number and find out if your birthday comes out to be lucky or not! 😀</p>
+            <a href="https://isyourbirth-daylucky.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Is-your-Birthday-Lucky" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Cash-Register-Manager</h1>
+            <small>September,2021 <span class="mark-num">markTen</span></small>
+            <p>This is a cash register manager app that tells the user what amount and what particular notes to return back to the customer.As a user you just need to add the bill amount and the cash paid by customer.Thereafter, you can check the notes that you need to return back to the customer.</p>
+            <a href="https://manage-your-cash.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Cash-Register-Manager" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
+
+    <!-- <section class="section light-orange">
+        <div class="container container-center">
+            <h1>Roman-Numeral-Translator</h1>
+            <small>September,2021 <span class="mark-num">markNine</span></small>
+            <p>This is a translator web app that converts Decimal numbers to Roman numerals.It is made using an API from funtranslations.com .</p>
+            <a href="https://roman-numeral-translator.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Roman-Numeral-Translator" class="link link-secondary">Source Code</a>
+        </div>
+    </section> -->
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Emoji-Interpreter</h1>
+            <small>September,2021 <span class="mark-num">markEight</span></small>
+            <p>This is an app that will interpret the meaning of the emojis that you type in or click on.
+            Do try this out to find your favourite Emoji's meaning.</p>
+            <a href="https://yr09y.csb.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Emoji-Interpreter" class="link link-secondary">Source Code</a>
+        </div>
+    </section>
 
     <section class="section light-orange">
         <div class="container container-center">
