--- a/blogs.html
+++ b/blogs.html
@@ -32,20 +32,18 @@
 
     <section class="section light-orange">
         <div class="container container-center">
-            <h1>Dummy blog 1</h1>
-            <p>This Quiz is to test how well do you know the two famous cartoon characters Doraemon and Shinchan, watched by kids and even adults.
-
-            So are you one of them? Try out this quiz to see for yourself ✌️</p>
-            <a href="" class="link link-primary">Read More...</a>
+            <h1>10 ways to make your HTML-CSS code accessible</h1>
+            <p>Web accessibilty is the most talked topic these days. But do you know why accessibilty is important.</p>
+            <a href="blog1.html" class="link link-primary">Read More...</a>
             
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
-            <h1>Dummy blog 2</h1>
-            <p>This is a quiz game about me. If you think you know me , You can try this out and see how well you know me :)</p>
-            <a href=""  class="link link-primary">Read More...</a>
+            <h1>Inactive and boring conduction of current online lectures</h1>
+            <p>Online classes and lectures have become the new norm. Maybe, more than a year ago, many of us would have just assumed that online education can somehow boost up. But who thought, that every kid, having access to education, has to wake up not to go to schools or colleges, but to sit in front of phones and laptops to attend lectures or what we say “online lectures”. Nobody did!!</p>
+            <a href="https://muskan-gupta.medium.com/inactive-and-boring-conduction-of-current-online-lectures-6e274a6ecafd"  class="link link-primary">Read More...</a>
             
         </div>
     </section>
