--- a/projects.html
+++ b/projects.html
@@ -79,15 +79,15 @@
         </div>
     </section>
 
-    <!-- <section class="section light-orange">
+    <section class="section light-orange">
         <div class="container container-center">
-            <h1>Roman-Numeral-Translator</h1>
+            <h1>Movie-Recommendation-App</h1>
             <small>September,2021 <span class="mark-num">markNine</span></small>
-            <p>This is a translator web app that converts Decimal numbers to Roman numerals.It is made using an API from funtranslations.com .</p>
-            <a href="https://roman-numeral-translator.netlify.app/" class="link link-primary">Live Project</a>
+            <p>This is a raect based movie recommendation app that shows movie with ratings as per chosen genre.</p>
+            <a href="https://h2krr.csb.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/muskan-gupta-0803/Roman-Numeral-Translator" class="link link-secondary">Source Code</a>
         </div>
-    </section> -->
+    </section>
 
     <section class="section">
         <div class="container container-center">
