added a new project

--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
             <h1>Stocks-App</h1>
             <small>September,2021 <span class="mark-num">markFourteen</span></small>
             <p>This is an app that will check and compare price of stocks to know if you are getting a profit or loss.Just add your number of stocks and its initial & current prices, and get the profit or loss value.💲</p>
-            <a href="https://profit-loss-in-stocks.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Stocks-App" class="link link-secondary">Source Code</a>
+            <a href="https://profit-loss-in-stocks.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Stocks-App" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -44,8 +44,8 @@
             <h1>Birthday-Palindrome</h1>
             <small>September,2021 <span class="mark-num">markThirteen</span></small>
             <p>🥳 This app will check if your birthday date is a palindrome or not.And if not it will tell you how many days gap is there between your date and palindrome date. 😀</p>
-            <a href="https://check-palindrome-birth-day.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Birthday-Palindrome" class="link link-secondary">Source Code</a>
+            <a href="https://check-palindrome-birth-day.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Birthday-Palindrome" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -54,8 +54,8 @@
             <h1>Do-you-know-Triangles</h1>
             <small>September,2021 <span class="mark-num">markTwelve</span></small>
             <p>This app will test you skills on how well do you know triangles and its properties.</p>
-            <a href="https://about-triangles.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Do-you-know-Triangles" class="link link-secondary">Source Code</a>
+            <a href="https://about-triangles.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Do-you-know-Triangles" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -64,8 +64,8 @@
             <h1>Is-Your-Birthday-Lucky?</h1>
             <small>September,2021 <span class="mark-num">markEleven</span></small>
             <p>🥳 This is a fun app to check if your birthdate is lucky or not depending on your lucky number.So think about your lucky number and find out if your birthday comes out to be lucky or not! 😀</p>
-            <a href="https://isyourbirth-daylucky.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Is-your-Birthday-Lucky" class="link link-secondary">Source Code</a>
+            <a href="https://isyourbirth-daylucky.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Is-your-Birthday-Lucky" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -74,8 +74,8 @@
             <h1>Cash-Register-Manager</h1>
             <small>September,2021 <span class="mark-num">markTen</span></small>
             <p>This is a cash register manager app that tells the user what amount and what particular notes to return back to the customer.As a user you just need to add the bill amount and the cash paid by customer.Thereafter, you can check the notes that you need to return back to the customer.</p>
-            <a href="https://manage-your-cash.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Cash-Register-Manager" class="link link-secondary">Source Code</a>
+            <a href="https://manage-your-cash.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Cash-Register-Manager" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -83,9 +83,9 @@
         <div class="container container-center">
             <h1>Movie-Recommendation-App</h1>
             <small>September,2021 <span class="mark-num">markNine</span></small>
-            <p>This is a raect based movie recommendation app that shows movie with ratings as per chosen genre.</p>
-            <a href="https://h2krr.csb.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Roman-Numeral-Translator" class="link link-secondary">Source Code</a>
+            <p>This is a raect based movie recommendation app that shows movie with ratings as per your chosen genre.🎬</p>
+            <a href="https://h2krr.csb.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Movie-Recommendation-App" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -93,10 +93,9 @@
         <div class="container container-center">
             <h1>Emoji-Interpreter</h1>
             <small>September,2021 <span class="mark-num">markEight</span></small>
-            <p>This is an app that will interpret the meaning of the emojis that you type in or click on.
-            Do try this out to find your favourite Emoji's meaning.</p>
-            <a href="https://yr09y.csb.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Emoji-Interpreter" class="link link-secondary">Source Code</a>
+            <p>This is an app that will interpret the meaning of the emojis that you type in or click on.Do try this out to find your favourite Emoji's meaning.</p>
+            <a href="https://yr09y.csb.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Emoji-Interpreter" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -105,8 +104,8 @@
             <h1>Roman-Numeral-Translator</h1>
             <small>August,2021 <span class="mark-num">markSeven</span></small>
             <p>This is a translator web app that converts Decimal numbers to Roman numerals.It is made using an API from funtranslations.com .</p>
-            <a href="https://roman-numeral-translator.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Roman-Numeral-Translator" class="link link-secondary">Source Code</a>
+            <a href="https://roman-numeral-translator.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Roman-Numeral-Translator" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -115,8 +114,8 @@
             <h1>Minion-Speak</h1>
             <small>August,2021 <span class="mark-num">markSix</span></small>
             <p>This is a Minion language translation app. So, If you are a Minion fan, use the translator to convert your text from English to Minion speak or Banana language.</p>
-            <a href="https://talk-in-minionese.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Minion-Speak" class="link link-secondary">Source Code</a>
+            <a href="https://talk-in-minionese.netlify.app/" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Minion-Speak" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
         
@@ -128,8 +127,8 @@
             <p>This Quiz is to test how well do you know the two famous cartoon characters Doraemon and Shinchan, watched by kids and even adults.
 
             So are you one of them? Try out this quiz to see for yourself ✌️</p>
-            <a href="https://replit.com/@muskangupta16/Fav-Character-Quiz?embed=1&output=1" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Fav-Character-Quiz" class="link link-secondary">Source Code</a>
+            <a href="https://replit.com/@muskangupta16/Fav-Character-Quiz?embed=1&output=1" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Fav-Character-Quiz" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
@@ -138,8 +137,8 @@
             <h1>Do-you-know-me-quiz</h1>
             <small>August,2021 <span class="mark-num">markOne</span></small>
             <p>This is a quiz game about me. If you think you know me , You can try this out and see how well you know me :)</p>
-            <a href="https://replit.com/@muskangupta16/final-quiz-game?embed=1&output=1" class="link link-primary">Live Project</a>
-            <a href="https://github.com/muskan-gupta-0803/Do-you-know-me---quiz" class="link link-secondary">Source Code</a>
+            <a href="https://replit.com/@muskangupta16/final-quiz-game?embed=1&output=1" class="link link-primary" target="_blank">Live Project</a>
+            <a href="https://github.com/muskan-gupta-0803/Do-you-know-me---quiz" class="link link-secondary" target="_blank">Source Code</a>
         </div>
     </section>
 
