did some minor changes in code

--- a/blog1.html
+++ b/blog1.html
@@ -24,13 +24,15 @@
     </nav>
 
     <h1>10 ways to make your HTML-CSS code accessible</h1>
+
     <p>Web accessibilty is the most talked topic these days. But do you know why accessibilty is important. One of the main reasons is that because of accessibility people with disabilities are able to use the same platforms and features that everyone else can. The whole web is beneficial fully only if its universally accessible to all.
-        
+    <img src="https://miro.medium.com/max/1400/1*toH7Bq60R47bbBgt_HVwxQ.jpeg" alt="Image depicting Web Accessibility" width="100%" style="margin:20px auto">  
+
     Some simple steps to make your webpage accessible are listed below:
     </p>
     <ul>
         <li>Use heading tags to show hierarchy in your content : This is an important way to accessible content. Make sure that main heading comes in h1 tag and then its subsections can be h2, h3 and so on.</li>
-        <li>Add a 'main' tag for inputting the most specific content of the page. ALso, there is only one main tag per page.</li>
+        <li>Add a 'main' tag for inputting the most specific content of the page. Also, there is only one main tag per page.</li>
         <li>Add alternative text to all images on the webpage: This mainly helps incase the image is broken or when screen readers are used for reading the page.</li>
         <li>Wrap your content in 'article' tag when you are writing independant content like news , blogs , etc.</li>
         <li>Contect inside the article element can be grouped inside the section elements. This ways thematically related contect can be put together as sections.</li>
@@ -40,7 +42,7 @@
         <li>Use various color combinations and contrasts to provide better readability.</li>
         <li>Use header and footer elements to provide navigation links and copyright information respectively.</li>
     </ul>
-    <p>In all, all these steps provide a semantic meaning to our page hence increasing its accessibilty.</p>
+    <p>In all, all these steps provide a semantic meaning to our page hence, increasing its accessibilty.</p>
 
 </body>
 </html>
