--- a/blogs.html
+++ b/blogs.html
@@ -34,7 +34,7 @@
         <div class="container container-center">
             <h1>10 ways to make your HTML-CSS code accessible</h1>
             <p>Web accessibilty is the most talked topic these days. But do you know why accessibilty is important.</p>
-            <a href="blog1.html" class="link link-primary">Read More...</a>
+            <a href="blog1.html" class="link link-primary" target="_blank">Read More...</a>
             
         </div>
     </section>
@@ -43,7 +43,7 @@
         <div class="container container-center">
             <h1>Inactive and boring conduction of current online lectures</h1>
             <p>Online classes and lectures have become the new norm. Maybe, more than a year ago, many of us would have just assumed that online education can somehow boost up. But who thought, that every kid, having access to education, has to wake up not to go to schools or colleges, but to sit in front of phones and laptops to attend lectures or what we say “online lectures”. Nobody did!!</p>
-            <a href="https://muskan-gupta.medium.com/inactive-and-boring-conduction-of-current-online-lectures-6e274a6ecafd"  class="link link-primary">Read More...</a>
+            <a href="https://muskan-gupta.medium.com/inactive-and-boring-conduction-of-current-online-lectures-6e274a6ecafd"  class="link link-primary" target="_blank">Read More...</a>
             
         </div>
     </section>
